--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,20 +14,20 @@ jobs:
         include:
           - platform: linux
             os: ubuntu-latest
-            pixi-command: pixi run -e linux test_linux
+            pixi-command: pixi run -e linux test_linux a1 b2 c3
           - platform: macos
             os: macos-latest
-            pixi-command: pixi run -e macos test_macos
+            pixi-command: pixi run -e macos test_macos a1 b2 c3
           - platform: windows
             os: windows-latest
             pixi-command: |
               call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-              pixi run -e windows test_windows
+              pixi run -e windows test_windows a1 b2 c3
           - platform: wasm
             os: ubuntu-latest
             pixi-command: |
-              pixi run -e wasm test_wasm
-              pixi run -e wasm test_base_wasm
+              pixi run -e wasm test_wasm a1 b2 c3
+              pixi run -e wasm test_base_wasm a1 b2 c3
     
     runs-on: ${{ matrix.os }}
     name: Test ${{ matrix.platform }}
