--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,20 +14,26 @@ jobs:
         include:
           - platform: linux
             os: ubuntu-latest
-            pixi-command: pixi run -e linux test_linux a1 b2 c3
+            pixi-command: |
+              pixi run -e linux test_linux a1 b2 c3
+              echo "test input data" | pixi run -e linux ./arena_linux --test-input
           - platform: macos
             os: macos-latest
-            pixi-command: pixi run -e macos test_macos a1 b2 c3
+            pixi-command: |
+              pixi run -e macos test_macos a1 b2 c3
+              echo "test input data" | pixi run -e macos ./arena_macos --test-input
           - platform: windows
             os: windows-latest
             pixi-command: |
               call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
               pixi run -e windows test_windows a1 b2 c3
+              echo test input data | pixi run -e windows arena_windows.exe --test-input
           - platform: wasm
             os: ubuntu-latest
             pixi-command: |
               pixi run -e wasm test_wasm a1 b2 c3
               pixi run -e wasm test_base_wasm a1 b2 c3
+              echo "test input data" | wasmtime --dir . arena.wasm --test-input
     
     runs-on: ${{ matrix.os }}
     name: Test ${{ matrix.platform }}
@@ -54,20 +60,3 @@ jobs:
         if: matrix.platform == 'windows'
         run: ${{ matrix.pixi-command }}
         shell: cmd
-
-      - name: Test stdin (Linux)
-        if: matrix.platform == 'linux'
-        run: echo "test input data" | pixi run -e linux ./arena_linux --test-input
-
-      - name: Test stdin (macOS)
-        if: matrix.platform == 'macos'
-        run: echo "test input data" | pixi run -e macos ./arena_macos --test-input
-
-      - name: Test stdin (Windows)
-        if: matrix.platform == 'windows'
-        run: echo test input data | pixi run -e windows arena_windows.exe --test-input
-        shell: cmd
-
-      - name: Test stdin (WASM)
-        if: matrix.platform == 'wasm'
-        run: echo "test input data" | wasmtime --dir . arena.wasm --test-input
