--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,17 +17,20 @@ jobs:
             pixi-command: |
               pixi run -e linux test_linux a1 b2 c3
               echo "test input data" | pixi run -e linux ./arena_linux --test-input
+              pixi run -e linux test_wordfreq_linux
           - platform: macos
             os: macos-latest
             pixi-command: |
               pixi run -e macos test_macos a1 b2 c3
               echo "test input data" | pixi run -e macos ./arena_macos --test-input
+              pixi run -e macos test_wordfreq_macos
           - platform: windows
             os: windows-latest
             pixi-command: |
               call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
               pixi run -e windows test_windows a1 b2 c3
               echo test input data | pixi run -e windows arena_windows.exe --test-input
+              pixi run -e windows test_wordfreq_windows
           - platform: wasm
             os: ubuntu-latest
             pixi-command: |
@@ -35,6 +38,7 @@ jobs:
               pixi run -e wasm test_base_wasm a1 b2 c3
               echo "test input data" | wasmtime --dir . arena.wasm --test-input
               echo "test input data" | wasmtime --dir . arena_base.wasm --test-input
+              pixi run -e wasm test_wordfreq_wasm
 
     runs-on: ${{ matrix.os }}
     name: Test ${{ matrix.platform }}
