--- a/pixi.toml
+++ b/pixi.toml
@@ -113,6 +113,40 @@ clang \
 
 test_wordfreq_wasm = { cmd="wasmtime --dir . wordfreq.wasm test_wordfreq.txt", depends-on=["build_wordfreq_wasm"] }
 
+build_gm_wasm = """
+clang \
+    --target=wasm32-wasi \
+    -Os \
+    -nostdlib \
+    -nostdinc \
+    -fno-builtin \
+    -I base \
+    -I stdlib \
+    -I native \
+    -I . \
+    -Wl,--no-entry \
+    -Wl,--export=__heap_base \
+    -Wl,--export=_start \
+    -Wl,--export=find_start_position \
+    -Wl,--initial-memory=131072 \
+    -o gm_init.wasm \
+    gm_init.c \
+    base/base_io.c \
+    base/buddy.c \
+    base/arena.c \
+    base/scratch.c \
+    base/format.c \
+    base/io.c \
+    base/base_string.c \
+    base/mem.c \
+    base/numconv.c \
+    base/assert.c \
+    base/exit.c \
+    native/wasi_wasm.c
+"""
+
+test_gm_wasm = { cmd="wasmtime --dir . gm_init.wasm", depends-on=["build_gm_wasm"] }
+
 [feature.wasm.dependencies]
 clang = ">=20.1.4,<21"
 lld = ">=20.1.4,<21"
@@ -176,6 +210,33 @@ clang \
 """
 
 test_wordfreq_linux = { cmd="./wordfreq_linux test_wordfreq.txt", depends-on=["build_wordfreq_linux"] }
+
+build_gm_linux = """
+clang \
+    -nostdlib \
+    -nostdinc \
+    -fno-builtin \
+    -I base \
+    -I stdlib \
+    -I native \
+    -I . \
+    -o gm_init_linux \
+    gm_init.c \
+    base/base_io.c \
+    base/buddy.c \
+    base/arena.c \
+    base/scratch.c \
+    base/format.c \
+    base/io.c \
+    base/base_string.c \
+    base/mem.c \
+    base/numconv.c \
+    base/assert.c \
+    base/exit.c \
+    native/wasi_linux.c
+"""
+
+test_gm_linux = { cmd="./gm_init_linux", depends-on=["build_gm_linux"] }
 
 [feature.linux.dependencies]
 clang = ">=20.1.4,<21"
@@ -245,6 +306,36 @@ clang \
 """
 
 test_wordfreq_macos = { cmd="./wordfreq_macos test_wordfreq.txt", depends-on=["build_wordfreq_macos"] }
+
+build_gm_macos = """
+clang \
+    -g \
+    -nostdlib \
+    -nostdinc \
+    -fno-builtin \
+    -I base \
+    -I stdlib \
+    -I native \
+    -I . \
+    -o gm_init_macos \
+    gm_init.c \
+    base/base_io.c \
+    base/buddy.c \
+    base/arena.c \
+    base/scratch.c \
+    base/format.c \
+    base/io.c \
+    base/base_string.c \
+    base/mem.c \
+    base/numconv.c \
+    base/assert.c \
+    base/exit.c \
+    native/wasi_macos.c \
+    -lSystem \
+    -Wl,-e,__start
+"""
+
+test_gm_macos = { cmd="./gm_init_macos", depends-on=["build_gm_macos"] }
 
 [feature.macos.dependencies]
 # Use the system Clang on macOS
@@ -367,12 +458,66 @@ link \
 
 test_wordfreq_windows = { cmd="wordfreq_windows.exe test_wordfreq.txt", depends-on=["build_wordfreq_windows"] }
 
+build_gm_windows = """
+cl \
+    /nologo \
+    /X \
+    /std:c11 \
+    /Zc:preprocessor \
+    /I"base" \
+    /I"stdlib" \
+    /I"native" \
+    /I"." \
+    /GS- \
+    /Gs0 \
+    /kernel \
+    /c \
+    gm_init.c \
+    base/base_io.c \
+    base/buddy.c \
+    base/arena.c \
+    base/scratch.c \
+    base/format.c \
+    base/io.c \
+    base/base_string.c \
+    base/mem.c \
+    base/numconv.c \
+    base/assert.c \
+    base/exit.c \
+    native/wasi_windows.c \
+    && \
+link \
+    /nologo \
+    /subsystem:console \
+    /nodefaultlib \
+    /entry:_start \
+    kernel32.lib \
+    shell32.lib \
+    gm_init.obj \
+    base_io.obj \
+    buddy.obj \
+    arena.obj \
+    scratch.obj \
+    format.obj \
+    io.obj \
+    base_string.obj \
+    mem.obj \
+    numconv.obj \
+    exit.obj \
+    assert.obj \
+    wasi_windows.obj \
+    /out:gm_init_windows.exe
+"""
+
+test_gm_windows = { cmd="gm_init_windows.exe", depends-on=["build_gm_windows"] }
+
 [feature.windows.dependencies]
 # Note: MSVC is not available through conda-forge, so we rely on system installation
 # Users need to have Visual Studio or Build Tools for Visual Studio installed
 # The cl.exe and link.exe commands should be available in PATH
 
 [tasks]
+serve = "python3 server.py"
 all = { depends-on=["test_wasm", "test_linux"] }
 all_with_macos = { depends-on=["test_wasm", "test_linux", "test_macos"] }
 all_with_windows = { depends-on=["test_wasm", "test_linux", "test_windows"] }
