--- a/pixi.toml
+++ b/pixi.toml
@@ -125,27 +125,13 @@ clang \
     -I native \
     -I . \
     -Wl,--no-entry \
-    -Wl,--export=__heap_base \
-    -Wl,--export=_start \
     -Wl,--export=find_start_position \
     -Wl,--initial-memory=131072 \
-    -o gm_init.wasm \
-    gm_init.c \
-    base/base_io.c \
-    base/buddy.c \
-    base/arena.c \
-    base/scratch.c \
-    base/format.c \
-    base/io.c \
-    base/base_string.c \
-    base/mem.c \
-    base/numconv.c \
-    base/assert.c \
-    base/exit.c \
-    native/wasi_wasm.c
+    -o gm.wasm \
+    gm.c
 """
 
-test_gm_wasm = { cmd="wasmtime --dir . gm_init.wasm", depends-on=["build_gm_wasm"] }
+test_gm_wasm = { cmd="echo 'WASM build successful: gm.wasm'", depends-on=["build_gm_wasm"] }
 
 [feature.wasm.dependencies]
 clang = ">=20.1.4,<21"
@@ -220,8 +206,9 @@ clang \
     -I stdlib \
     -I native \
     -I . \
-    -o gm_init_linux \
-    gm_init.c \
+    -o gm_linux \
+    gm.c \
+    gm_test.c \
     base/base_io.c \
     base/buddy.c \
     base/arena.c \
@@ -236,7 +223,7 @@ clang \
     native/wasi_linux.c
 """
 
-test_gm_linux = { cmd="./gm_init_linux", depends-on=["build_gm_linux"] }
+test_gm_linux = { cmd="./gm_linux", depends-on=["build_gm_linux"] }
 
 [feature.linux.dependencies]
 clang = ">=20.1.4,<21"
@@ -317,8 +304,9 @@ clang \
     -I stdlib \
     -I native \
     -I . \
-    -o gm_init_macos \
-    gm_init.c \
+    -o gm_macos \
+    gm.c \
+    gm_test.c \
     base/base_io.c \
     base/buddy.c \
     base/arena.c \
@@ -335,7 +323,7 @@ clang \
     -Wl,-e,__start
 """
 
-test_gm_macos = { cmd="./gm_init_macos", depends-on=["build_gm_macos"] }
+test_gm_macos = { cmd="./gm_macos", depends-on=["build_gm_macos"] }
 
 [feature.macos.dependencies]
 # Use the system Clang on macOS
@@ -472,7 +460,8 @@ cl \
     /Gs0 \
     /kernel \
     /c \
-    gm_init.c \
+    gm.c \
+    gm_test.c \
     base/base_io.c \
     base/buddy.c \
     base/arena.c \
@@ -493,7 +482,8 @@ link \
     /entry:_start \
     kernel32.lib \
     shell32.lib \
-    gm_init.obj \
+    gm.obj \
+    gm_test.obj \
     base_io.obj \
     buddy.obj \
     arena.obj \
@@ -506,10 +496,10 @@ link \
     exit.obj \
     assert.obj \
     wasi_windows.obj \
-    /out:gm_init_windows.exe
+    /out:gm_windows.exe
 """
 
-test_gm_windows = { cmd="gm_init_windows.exe", depends-on=["build_gm_windows"] }
+test_gm_windows = { cmd="gm_windows.exe", depends-on=["build_gm_windows"] }
 
 [feature.windows.dependencies]
 # Note: MSVC is not available through conda-forge, so we rely on system installation
@@ -517,7 +507,7 @@ test_gm_windows = { cmd="gm_init_windows.exe", depends-on=["build_gm_windows"] }
 # The cl.exe and link.exe commands should be available in PATH
 
 [tasks]
-serve = "python3 server.py"
+serve = { cmd="python3 server.py", depends-on=["test_gm_wasm"] }
 all = { depends-on=["test_wasm", "test_linux"] }
 all_with_macos = { depends-on=["test_wasm", "test_linux", "test_macos"] }
 all_with_windows = { depends-on=["test_wasm", "test_linux", "test_windows"] }
