--- a/pixi.toml
+++ b/pixi.toml
@@ -131,8 +131,12 @@ clang \
     -Wl,--export=gm_register_webgpu_handles \
     -Wl,--export=gm_create_gpu_buffers \
     -Wl,--export=gm_get_gpu_buffer_table \
+    -Wl,--export=gm_get_gpu_buffer_count \
     -Wl,--export=gm_get_uniform_float_count \
     -Wl,--export=gm_get_uniform_buffer_size \
+    -Wl,--export=gm_create_shader_modules \
+    -Wl,--export=gm_get_shader_module_table \
+    -Wl,--export=gm_get_shader_module_count \
     -Wl,--initial-memory=262144 \
     -o gm.wasm \
     gm.c \
