--- a/pixi.toml
+++ b/pixi.toml
@@ -165,6 +165,8 @@ clang \
     -Wl,--export=gm_get_wall_texture_url \
     -Wl,--export=gm_get_floor_texture_url \
     -Wl,--export=gm_get_ceiling_texture_url \
+    -Wl,--export=gm_texture_format_from_string \
+    -Wl,--export=gm_texture_format_to_string \
     -Wl,--export=__heap_base \
     -Wl,--initial-memory=1048576 \
     -o gm.wasm \
