--- a/pixi.toml
+++ b/pixi.toml
@@ -127,46 +127,7 @@ clang \
     -Wl,--no-entry \
     -Wl,--export=find_start_position \
     -Wl,--export=generate_mesh \
-    -Wl,--export=gm_get_preferred_canvas_format \
-    -Wl,--export=gm_register_webgpu_handles \
-    -Wl,--export=gm_create_gpu_buffers \
-    -Wl,--export=gm_get_gpu_buffer_table \
-    -Wl,--export=gm_get_gpu_buffer_count \
-    -Wl,--export=gm_get_uniform_float_count \
-    -Wl,--export=gm_create_shader_modules \
-    -Wl,--export=gm_get_shader_module_table \
-    -Wl,--export=gm_get_shader_module_count \
-    -Wl,--export=gm_register_texture_views \
-    -Wl,--export=gm_create_bind_group_layouts \
-    -Wl,--export=gm_create_pipeline_layouts \
-    -Wl,--export=gm_create_render_pipelines \
-    -Wl,--export=gm_create_bind_groups \
-    -Wl,--export=gm_get_bind_group_table \
-    -Wl,--export=gm_get_bind_group_count \
-    -Wl,--export=gm_get_render_pipeline_table \
-    -Wl,--export=gm_get_render_pipeline_count \
-    -Wl,--export=gm_init_game_state \
-    -Wl,--export=gm_set_key_state \
-    -Wl,--export=gm_add_mouse_delta \
-    -Wl,--export=gm_update_frame \
-    -Wl,--export=gm_get_uniform_data \
-    -Wl,--export=gm_build_overlay_text \
-    -Wl,--export=gm_get_overlay_uniform_data \
-    -Wl,--export=gm_update_perf_metrics \
-    -Wl,--export=gm_set_active_game_state \
-    -Wl,--export=gm_on_animation_frame \
-    -Wl,--export=gm_main \
-    -Wl,--export=gm_get_default_map \
-    -Wl,--export=gm_get_map_width \
-    -Wl,--export=gm_get_map_height \
-    -Wl,--export=gm_get_temp_buffer \
-    -Wl,--export=gm_get_game_state_ptr \
-    -Wl,--export=gm_handle_key_press \
-    -Wl,--export=gm_get_wall_texture_url \
-    -Wl,--export=gm_get_floor_texture_url \
-    -Wl,--export=gm_get_ceiling_texture_url \
-    -Wl,--export=gm_texture_format_from_string \
-    -Wl,--export=gm_texture_format_to_string \
+    -Wl,--export=gm_frame \
     -Wl,--export=__heap_base \
     -Wl,--initial-memory=1048576 \
     -o gm.wasm \
